AUTOMAKE_OPTIONS = foreign

EXTRA_DIST = 	autogen.sh TODO

ACLOCAL_AMFLAGS = -I m4

SUBDIRS = 	asm \
		extra \
		src/opcodes \
		src/bus \
		src/core \
		src/utils \
		src/detection \
		src/protection \
		test \
		test/pcapfiles \
		samples/exploits \
		samples/exploits/http \
		samples/exploits/sip \
		docs 		

MAINTAINERCLEANFILES = config.h.in Makefile.in configure stamp-h1 config.log py-compile \
	ltmain.sh missing install-sh depcomp config.sub config.guess aclocal.m4
 
