AC_INIT([polyvaccine],[1.0],[luis.camp0.2009@gmail.com],[],[])
AM_INIT_AUTOMAKE(polyvaccine,1.0)
AM_PROG_LIBTOOL

AC_CONFIG_HEADER(config.h)

AC_CONFIG_MACRO_DIR([m4])
m4_include([m4/ax_python_module.m4])
m4_include([m4/debug.m4])

AC_PREREQ(2.59)

AC_PROG_INSTALL

AC_LANG([C])
AC_PROG_CXX
AC_PROG_MAKE_SET
AC_SUBST([AM_CFLAGS], [-Wall -fPIC])
#AC_SUBST([AM_CPPFLAGS], [-Wall -fPIC])


AM_PATH_PYTHON(2.6)
AX_PKG_SWIG(1.3.36, , AC_MSG_ERROR("Swig is required."))
AX_SWIG_ENABLE_CXX
AX_SWIG_MULTI_MODULE_SUPPORT
AX_SWIG_PYTHON

dnl Checks for libraries
AC_PYTHON_MODULE(unittest)

AX_PYTHON

dnl pcap 
AC_CHECK_LIB(pcap, main, ,AC_MSG_ERROR("Install pcap library"),)
AC_CHECK_HEADER(pcap.h, ,[AC_MSG_ERROR("pcap.h header not found.")],)

dnl pcre 
AC_CHECK_LIB(pcre, main, ,AC_MSG_ERROR("Install perl regular expresion library"),)
AC_CHECK_HEADER(pcre.h, ,[AC_MSG_ERROR("pcre.h header not found.")],)

PKG_CHECK_MODULES(GLIB,[glib-2.0 >= 2.10.3],[],AC_MSG_ERROR($GLIB_PKG_ERRORS))

PKG_CHECK_MODULES(DBUS,dbus-1 )

AC_CHECK_DEBUG

AC_CHECK_PROGS([DOXYGEN], [doxygen])
if test -z "$DOXYGEN";
	then AC_MSG_WARN([Doxygen not found - continuing without Doxygen support])
	enable_doxygen=no
else
	enable_doxygen=yes
fi
AM_CONDITIONAL([HAVE_DOXYGEN], 
[test -n "$DOXYGEN"])AM_COND_IF([HAVE_DOXYGEN], [AC_CONFIG_FILES([docs/doxyfile])])


AC_OUTPUT([
Makefile
asm/Makefile
extra/Makefile
src/utils/Makefile
src/opcodes/Makefile
src/bus/Makefile
src/core/Makefile
src/detection/Makefile
pdf/Makefile
test/Makefile
test/pcapfiles/Makefile
samples/exploits/Makefile
samples/exploits/http/Makefile
samples/exploits/sip/Makefile
docs/Makefile
])

echo "
  Polyvaccine Engine 
  ($PACKAGE_NAME) version $PACKAGE_VERSION
  Prefix...............: $prefix
  Debug Build..........: $enable_debug
  C Compiler...........: $CXX $CXXFLAGS $CPPFLAGS
  Linker...............: $LD $LDFLAGS $LIBS
  Doxygen..............: $enable_doxygen
"

